# interusting

./: Makefile  readme.md
builder-pattern/: Cargo.toml
builder-pattern/src/: main.rs
docgen/: Cargo.toml
docgen/src/: main.rs
environment-variables/: .example.env  Cargo.toml
environment-variables/configs/: actix.yaml  database.json
environment-variables/src/: main.rs
grep/: Cargo.toml
grep/src/: lib.rs  main.rs
port-scanner/: Cargo.toml
randomness/: Cargo.toml
sea-orm/: Cargo.toml  docker-compose.yml
sea-orm-queries/: Cargo.toml  Makefile
sea-orm-queries/migration/src/: lib.rs  m20241121_000001_create_bakery_table.rs  m20241121_000002_create_chef_table.rs  m20241122_000000_setup_database.rs  m20241122_085421_create_users.rs  m20241122_125531_create_posts.rs  m20241122_130446_create_comments.rs
sea-orm-queries/src/: lib.rs  main.rs
sea-orm-queries/src/entities/: bakery.rs  chef.rs  comments.rs  mod.rs  posts.rs  prelude.rs  users.rs
sqlx-queries/: Cargo.toml  Makefile  docker-compose.yml
sqlx-queries/migrations/: 20241124100348_create_users.sql  20241124100355_create_posts.sql  20241124100358_create_comments.sql
sqlx-queries/src/: lib.rs  main.rs
web-server/: Cargo.toml
web-server/src/: main.rs
