[package]
name = "port-scanner"
description = "The project implements simple port scanner. It was created with [Make a port scanner in Rust](https://www.youtube.com/watch?v=J3C6sNK2wnk) YouTube video."
version = "0.1.0"
edition = "2021"

[dependencies]
cidr = "0.3.0"
clap = { version = "4.5.20", features = ["derive", "unicode", "wrap_help"] }
tokio = { version = "1.40.0", features = ["full"] }
