[package]
name = "randomness"
description = "This project demonstrates how to generate random data."
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
fake = { version = "3.0.1", features = ["chrono", "uuid"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
uuid = "1.11.0"
