[package]
name = "sea-orm-queries"
description = "Project demonstrates how to interact with PostgreSQL database using SeaORM library."
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies.migration]
path = "migration"

[dependencies]
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-query = "0.32.0"
tokio = { version = "1.41.1", features = ["full"] }

