[package]
name = "sea-orm-queries"
description = "Project demonstrates how to interact with PostgreSQL database using SeaORM library."
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies.migration]
path = "migration"

[dependencies]
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print"] }
sea-query = "0.32.0"
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

